# cloudpoint

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  host-test.yml  release.yml  test.yml
.zed/: settings.json
caddy/: Caddyfile  Dockerfile
cloudpoint_app/: .clangd  Cargo.toml  build.rs
cloudpoint_app/.zed/: settings.json
cloudpoint_app/cia/: banner.bcwav  banner.bnr  bannertool  cloudpoint.rsf  cloudpoint.smdh  logo.bcma.lz  makerom
cloudpoint_app/romfs/: icons.t3x
cloudpoint_app/src/: app.rs  app_logger.rs  archive.rs  config.rs  ctr.rs  ctr_archive.rs  ctr_cfgi.rs  ctr_fs.rs  ctr_gfx.rs  ctr_ndmu.rs  ctr_nwm.rs  ctr_os.rs  ctr_title.rs  db.rs  ffi.rs  link.rs  main.rs  screens.rs  services.rs  settings.rs  setup.rs  store.rs  sync.rs  title.rs  tree.rs
cloudpoint_app/src/app/: messaging.rs  msg.rs  worker.rs
cloudpoint_app/src/ctr_fs/: ffi.rs  leaf.rs
cloudpoint_app/src/ctr_gfx/: c2d.rs  draw.rs  icons.rs
cloudpoint_app/src/ctr_gfx/icons/: bindings.rs  icons.h
cloudpoint_app/src/db/: install.rs  install_history.rs  state.rs  title.rs
cloudpoint_app/src/gfx/: draw.rs
cloudpoint_app/src/gfx/c2d/: bindings.rs  extern.c  wrapper.h
cloudpoint_app/src/gfx/icons/: bindings.rs
cloudpoint_app/src/screens/: conflict.rs  conflict_modal.rs  connect_modal.rs  error_modal.rs  games.rs  help.rs  link.rs  link_client_modal.rs  link_host_modal.rs  refresh_modal.rs  shared.rs  shutdown_modal.rs  sync.rs  sync_modal.rs  titles.rs
cloudpoint_lib/: Cargo.toml  build.rs
cloudpoint_lib/src/: ctr.rs  http.rs  lib.rs  net.rs  settings.rs  store.rs  sync.rs  title.rs  utils.rs  version.rs
cloudpoint_server/: Caddyfile  Caddyfile.dev  Caddyfile.prod  Cargo.toml  Dockerfile  README.md  build.sh  compose.dev.yml  compose.local.yml  compose.prod.yml  compose.public.yml  dufs.yaml  nginx-webdav.conf  start.sh
cloudpoint_server/fixtures/: chunks.sql  versions.sql
cloudpoint_server/migrations/: 1_chunks.sql  2_versions.sql
cloudpoint_server/src/: app.rs  hex_u128.rs  import_v0.rs  main.rs  services.rs  tests.rs  v0_import.rs  v1.rs
cloudpoint_server/src/app/tests/: v0.rs  v1.rs
cloudpoint_server/src/handlers/: v0.rs  v1.rs
cloudpoint_server/src/services/: chunk.rs  version.rs
cloudpoint_server/src/tests/: v0.rs  v1.rs
patches/libz-sys/: Cargo.toml  build.rs
src/: lib.rs  main.rs
