[workspace]
resolver = "3"
members = ["cloudpoint_app", "cloudpoint_lib", "cloudpoint_server"]
default-members = ["cloudpoint_app", "cloudpoint_lib"]

[workspace.dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
chunktree = { git = "ssh://git@github.com/dwalker109/chunktree.git", branch = "main", default-features = false }
cloudpoint_lib = { path = "cloudpoint_lib" }
config = { version = "0.15.22", default-features = false }
curl-sys = { version = "0.4", default-features = false }
flexi_logger = { version = "0.31.8", default-features = false }
httpmock = "0.8.3"
itertools = "0.14.0"
libc = "0.2"
log = "0.4.29"
postcard = "1.1.3"
serde = "1.0.228"
serde_json = "1.0.149"
uuid = "1.23.1"
flate2 = "1.1.9"
twox-hash = "2.1.2"
lru = "0.18.0"

[patch.crates-io]
libz-sys = { path = "patches/libz-sys" }
