[package]
name = "cloudpoint_app"
version = "0.1.0"
edition = "2024"

[dependencies]
cloudpoint_lib = { path = "../cloudpoint_lib" }
chunktree = { path = "../../chunktree" }
anyhow = "1.0.102"
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
serde = "1.0.228"
serde_json = "1.0.149"
postcard = "1.1.3"
log = "0.4.29"
flexi_logger = { version = "0.31.8", default-features = false }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
