[package]
name = "cloudpoint_app"
version = "0.1.0"
edition = "2024"

[dependencies]
cloudpoint_lib = { workspace = true }
chunktree = { workspace = true }
anyhow = { workspace = true }
ctru-rs = { workspace = true }
ctru-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
log = { workspace = true }
flexi_logger = { workspace = true }
chrono = { workspace = true }
config = { workspace = true, features = ["ini"] }
uuid = { workspace = true, features = ["v4"] }
itertools = { workspace = true }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
