[package]
name = "cloudpoint"
edition = "2024"

[dependencies]
cloudpoint_lib = { workspace = true }
chunktree = { workspace = true }
anyhow = { workspace = true }
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
log = { workspace = true }
flexi_logger = { workspace = true }
chrono = { workspace = true }
config = { workspace = true, features = ["ini"] }
uuid = { workspace = true, features = ["v4"] }
itertools = { workspace = true }
twox-hash = { workspace = true }


[package.metadata.cargo-3ds]
romfs_dir = "romfs"
