[package]
name = "cloudpoint_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
itertools = "0.14.0"
curl-sys = { version = "0.4", default-features = false }
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chunktree = { path = "../../chunktree", default-features = false }
postcard = "1.1.3"
log = "0.4.29"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
httpmock = "0.8.3"
