[package]
name = "cloudpoint_lib"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
curl-sys = { workspace = true }
libc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chunktree = { workspace = true }
postcard = { workspace = true }
log = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
flate2 = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
